// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nager.Date API E2E tests NextPublicHolidays endpoint should retrieve the next public holidays for a country 1`] = `
[
  {
  "date": "2024-01-15",
  "localName": "Martin Luther King, Jr. Day",
  "name": "Martin Luther King, Jr. Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2024-02-19",
  "localName": "Presidents Day",
  "name": "Washington's Birthday",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2024-03-29",
  "localName": "Good Friday",
  "name": "Good Friday",
  "countryCode": "US",
  "fixed": false,
  "global": false,
  "counties": [
    "US-CT",
    "US-DE",
    "US-HI",
    "US-IN",
    "US-KY",
    "US-LA",
    "US-NC",
    "US-ND",
    "US-NJ",
    "US-TN"
  ],
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2024-05-27",
  "localName": "Memorial Day",
  "name": "Memorial Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2024-06-19",
  "localName": "Juneteenth",
  "name": "Juneteenth",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": 2021,
  "types": [
    "Public"
  ]
},
  {
  "date": "2024-07-04",
  "localName": "Independence Day",
  "name": "Independence Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2024-09-02",
  "localName": "Labor Day",
  "name": "Labour Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2024-10-14",
  "localName": "Columbus Day",
  "name": "Columbus Day",
  "countryCode": "US",
  "fixed": false,
  "global": false,
  "counties": [
    "US-AL",
    "US-AZ",
    "US-CO",
    "US-CT",
    "US-GA",
    "US-ID",
    "US-IL",
    "US-IN",
    "US-IA",
    "US-KS",
    "US-KY",
    "US-LA",
    "US-ME",
    "US-MD",
    "US-MA",
    "US-MS",
    "US-MO",
    "US-MT",
    "US-NE",
    "US-NH",
    "US-NJ",
    "US-NM",
    "US-NY",
    "US-NC",
    "US-OH",
    "US-OK",
    "US-PA",
    "US-RI",
    "US-SC",
    "US-TN",
    "US-UT",
    "US-VA",
    "US-WV"
  ],
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2024-11-11",
  "localName": "Veterans Day",
  "name": "Veterans Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2024-11-28",
  "localName": "Thanksgiving Day",
  "name": "Thanksgiving Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": 1863,
  "types": [
    "Public"
  ]
},
  {
  "date": "2024-12-25",
  "localName": "Christmas Day",
  "name": "Christmas Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2025-01-01",
  "localName": "New Year's Day",
  "name": "New Year's Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
]
`;

exports[`Nager.Date API E2E tests PublicHolidays endpoint should retrieve the public holidays for a specific year and country 1`] = `
[
  {
  "date": "2021-12-31",
  "localName": "New Year's Day",
  "name": "New Year's Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2022-01-17",
  "localName": "Martin Luther King, Jr. Day",
  "name": "Martin Luther King, Jr. Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2022-02-21",
  "localName": "Presidents Day",
  "name": "Washington's Birthday",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2022-04-15",
  "localName": "Good Friday",
  "name": "Good Friday",
  "countryCode": "US",
  "fixed": false,
  "global": false,
  "counties": [
    "US-CT",
    "US-DE",
    "US-HI",
    "US-IN",
    "US-KY",
    "US-LA",
    "US-NC",
    "US-ND",
    "US-NJ",
    "US-TN"
  ],
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2022-04-15",
  "localName": "Good Friday",
  "name": "Good Friday",
  "countryCode": "US",
  "fixed": false,
  "global": false,
  "counties": [
    "US-TX"
  ],
  "launchYear": null,
  "types": [
    "Optional"
  ]
},
  {
  "date": "2022-05-30",
  "localName": "Memorial Day",
  "name": "Memorial Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2022-06-20",
  "localName": "Juneteenth",
  "name": "Juneteenth",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": 2021,
  "types": [
    "Public"
  ]
},
  {
  "date": "2022-07-04",
  "localName": "Independence Day",
  "name": "Independence Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2022-09-05",
  "localName": "Labor Day",
  "name": "Labour Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2022-10-10",
  "localName": "Columbus Day",
  "name": "Columbus Day",
  "countryCode": "US",
  "fixed": false,
  "global": false,
  "counties": [
    "US-AL",
    "US-AZ",
    "US-CO",
    "US-CT",
    "US-GA",
    "US-ID",
    "US-IL",
    "US-IN",
    "US-IA",
    "US-KS",
    "US-KY",
    "US-LA",
    "US-ME",
    "US-MD",
    "US-MA",
    "US-MS",
    "US-MO",
    "US-MT",
    "US-NE",
    "US-NH",
    "US-NJ",
    "US-NM",
    "US-NY",
    "US-NC",
    "US-OH",
    "US-OK",
    "US-PA",
    "US-RI",
    "US-SC",
    "US-TN",
    "US-UT",
    "US-VA",
    "US-WV"
  ],
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2022-11-11",
  "localName": "Veterans Day",
  "name": "Veterans Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
  {
  "date": "2022-11-24",
  "localName": "Thanksgiving Day",
  "name": "Thanksgiving Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": 1863,
  "types": [
    "Public"
  ]
},
  {
  "date": "2022-12-26",
  "localName": "Christmas Day",
  "name": "Christmas Day",
  "countryCode": "US",
  "fixed": false,
  "global": true,
  "counties": null,
  "launchYear": null,
  "types": [
    "Public"
  ]
},
]
`;
